# elevenagents-livekit-plugin

./: .gitignore  README.md  pyproject.toml
examples/: agent.py  basic.py
src/elevenagents_livekit_plugin/: __init__.py  adapter.py  bridge.py  livekit_client.py  server.py  session_manager.py  tools.py
