[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elevenagents-livekit-plugin"
version = "0.1.0"
description = "Bridge between LiveKit Agents and ElevenAgents Voice Orchestration"
requires-python = ">=3.10"
dependencies = [
    "livekit>=1.0.0",
    "livekit-api>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.setuptools.packages.find]
where = ["src"]
